# allocator_collection

src/: CMakeLists.txt  ac_concepts.hpp  block_allocator.hpp  block_entry.hpp  chunk_controller.hpp  chunk_list_wrapper.hpp  dumb_chunk_allocator.hpp  shared_memory_allocator.hpp  static_chunk_allocator.hpp  sync_chunk_allocator.hpp
src/test/: block_allocator_test.cpp  block_entry_test.cpp  chunk_controller_test.cpp  chunk_list_wrapper_test.cpp  dumb_chunk_allocator_test.cpp  static_chunk_allocator_test.cpp
